# synthetic-dataset-generation-SOD-blender

./: .gitignore  README.md  batch_render.py  run_blenderender.py  scripting_in_blender.py
blender_renderer/: render_dataset.py  render_dataset_augmented.py  render_dataset_flat.py  render_dataset_v2.py
blenderkit-scraper/: .env.example  Cargo.toml  README.md
blenderkit-scraper/src/: main.rs
