[package]
name = "blenderkit-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
anyhow = "1.0"
indicatif = "0.17"
uuid = { version = "1.0", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
